@@ -1,3 +1,5 @@
+20090806
+	increase `backlog' value in all listen calls in hosted Inferno (emu/*/ipif*.c) [powerman]
 20090805
 	further checking added to libinterp/keyring.c: rejects incorrect states and out of bounds values of f->n
 	add lib/emptydirs and mkdirs target to /mkfile (utils/mkdir needs to be changed for Windows use)
